fix(discover): ui update missing colors

--- a/app/modules/discover/components/discover-search-list-header/discover-search-list-header.scss
+++ b/app/modules/discover/components/discover-search-list-header/discover-search-list-header.scss
@@ -28,9 +28,9 @@
         display: flex;
         margin-right: 1rem;
         &.active {
-            color: $primary;
+            color: $color-link-primary;
             svg {
-                fill: $primary;
+                fill: $color-link-primary;
             }
         }
     }
