--- a/app/modules/discover/components/highlighted/highlighted.scss
+++ b/app/modules/discover/components/highlighted/highlighted.scss
@@ -203,9 +203,9 @@
             margin-left: .2rem;
         }
         &.active {
-            color: $primary;
+            color: $color-link-primary;
             svg {
-                fill: $primary;
+                fill: $color-link-primary;
             }
         }
     }
