--- a/app/modules/discover/discover-search/discover-search.scss
+++ b/app/modules/discover/discover-search/discover-search.scss
@@ -95,9 +95,9 @@
             stroke: $gray-light;
         }
         &.active {
-            color: $primary;
+            color: $color-link-primary;
             svg {
-                fill: $primary;
+                fill: $color-link-primary;
             }
         }
     }
